Troubleshooting 100vh issue on mobile.

--- a/theme/global.css
+++ b/theme/global.css
@@ -42,3 +42,24 @@
     -webkit-animation: dash 1.75s linear 0s forwards infinite;
             animation: dash 1.75s linear 0s forwards infinite;
   }
+
+  @media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait) {
+    body {                           
+        height: 1024px;                         
+    }                       
+}   
+                                            
+/* iPad with landscape orientation. */                       
+@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape) {                         
+    body {                           
+        height: 768px;                         
+    }                       
+}
+                                               
+/* iPhone 5 
+You can also target devices with aspect ratio. */
+@media screen and (device-aspect-ratio: 40/71) {                              
+    body {                           
+        height: 500px;                         
+    }                       
+}
